# LookAI

./: LICENSE  README.md  package-lock.json
lookAI/: Cargo.toml  YOLO.py
lookAI/src/: main.rs  signal_server.rs  slam.rs  video_decoder.rs  web_rtc.rs
lookTerminal/: .gitignore  LICENSE  index.html  nerv.css  package-lock.json  package.json  tsconfig.json  vite.config.ts
lookTerminal/src/: ECSSetter.ts  LLMSystem.ts  index.ts  magiSystem.ts
