[package]
name = "look_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
webrtc = "0.10"
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
# YOLO推論（ONNX Runtime）
# ※要: ONNX Runtime のインストール
#onnxruntime = "0.0.14"
anyhow = "1.0.102"
futures-util = "0.3.32"
tokio-tungstenite = "0.29.0"
dashmap = "6.0"
bytes = "1.11.1"
